# Project_SNCF

./: .dockerignore  README.md  dockerfile  pyproject.toml
Scripts/: install.sh  launch.sh
app/: main.py
src/data/: collect_api.py  transform.py
