[project]
name = "project-sncf"
version = "0.1.0"
description = "Streamlit dashboard pour SNCF retards"
authors = [
    {name = "Amel et Juan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.3,<0.26.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ruff (>=0.14.3,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "RET", "SIM"]
ignore = ["E501", "N999", "N815", "E712"]

extend-select = [
    "E231",
    "E112",
    "E113",
    "E114",
    "E117",
    "E201",
    "E202",
    "E203",
    "E211",
    "E221",
    "E222",
    "E223",
    "E224",
    "E225",
    "E226",
    "E227",
    "E228",
    "E251",
    "E252",
    "E262",
    "E275",
    "PLR2004",
    "PLR5501"
]
